--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
     <div class="row row-cols-1 row-cols-3 m-5">
     <div class="col">
         <div class="card mb-3" style="max-width: 18rem;">
-            <div class="card-header h3 text-white bg-primary"> bob <br> <span class="h5">Manager</span></div>
+            <div class="card-header h3 text-white bg-primary"> ashdlff
+            <br> 
+            <span class="h5"> Manager </span></div>
             <div class="card-body">
                 <p class="card-text">
                   <div class="border p-1">
-                    ID: 1 
+                    ID: alskdfj 
                   </div> 
                   <div class="border p-1">
-                    Email: 1
+                    Email: alsdfkja
                   </div> 
                   <div class="border p-1">
-                    Office number: 1
+                    Office Number: falksjdf
                   </div> 
                 </p>
             </div>
@@ -21,17 +23,19 @@
     <div class="row row-cols-1 row-cols-3 m-5">
     <div class="col">
         <div class="card mb-3" style="max-width: 18rem;">
-            <div class="card-header h3 text-white bg-primary"> ann <br> <span class="h5">Manager</span></div>
+            <div class="card-header h3 text-white bg-primary"> adflka
+            <br> 
+            <span class="h5"> Engineer </span></div>
             <div class="card-body">
                 <p class="card-text">
                   <div class="border p-1">
-                    ID: 2 
+                    ID: afdl 
                   </div> 
                   <div class="border p-1">
-                    Email: 2
+                    Email: gew
                   </div> 
                   <div class="border p-1">
-                    Office number: 2
+                    Github Username: asdf
                   </div> 
                 </p>
             </div>
